# v0.2.25 unreleased

- Data is computed for the running month as well

# v0.2.24 2021-09-10

- Metadata for new metrics translated to spanish and catalan

# v0.2.23 2021-09-09

- New metrics:
  - (new/canceled)entitycontracts: Contracts with legal
    persons or having non-residentials activities
  - (new/canceled)publiccontracts: Contracts with the public
    administration (special case for entities)
  - (new/canceled)homeownercomunitycontracts: Contracts
    with homeowner communities (special case for entities)
- Infrastructure:
  - Metric erp queries can be built just on a simpler inner query.
    Time/city aggregation is provided on top in a generic way.
    Having the inner query separated simplifies debugging.

# v0.2.22 2021-07-16

- Plant production metric taken from Som Energia's plant
  monitoring system (plantmonitor) which is separated
  from the ERP and mixes historical monthly records up
  to 2020 with data directly taken measures since 2021.

# v0.2.21 2021-06-08

- New metrics:
  - plantpower: deployed power in renewable energy plants
  - plantproduction: generated energy in plants

# v0.2.20 2021-05-25

- City level maps for local groups (filter by local group)
  - Just Baix Montseny and Baix Llobregat available.
- Jenkins integration

# v0.2.19 2021-03-26

- Numeric data in TSV format with query param `format=tsv`
- Legacy API v0.1 has been dropped (TSV was the only reason to keep it)
- Date semantic change: measures are taken at the begining of
  the date, not at the end, so that events during the date
  are not included.
  This makes year and month aggregation more consistent.
  Yearly aggregated 2021-01-01 will contain all events in 2020
  but none in 2021.
- Map API errors are issued as SVG images
- Numeric API errors as YAML, not JSON to match success format

# v0.2.18 2021-03-10

- Map legend puts higher values on top
- Maps expand by default
- State map poligons reviewed to match the state (Fixes #5)